--- a/confirmation.html
+++ b/confirmation.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thoughts Dump!</title>
+    <title>Confirmation - Thoughts Dump!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div class="homepage-container">
+    <div class="container">
+        <!-- Main Title -->
         <div class="header">
-            <h1>Thoughts Dump!</h1>
+            <h1>Thoughts Dump</h1>
             <p class="subheading">That felt good, didn’t it? Let it out, and feel free to dump more whenever you want.</p>
         </div>
 
+        <!-- Confirmation Message -->
         <div class="confirmation-message">
             <p>We appreciate you sharing your thoughts. Take a deep breath, you’re awesome!</p>
         </div>
 
-        <!-- Coffee Donation Section -->
         <div class="coffee-section">
-            <p>If you’d like to show some love, feel free to buy me a coffee! It’s totally optional:</p>
-            <img src="your-maya-qr-code.png" alt="Maya QR Code">
-            <p>Scan the QR code to buy me a coffee. ☕</p>
-        </div>
+    <p>If you'd like to show some love, feel free to buy me a coffee! It’s totally optional:</p>
+    <img src="your-maya-qr-code.png" alt="Maya QR Code">
+    <p>Scan the QR code to buy me a coffee. ☕</p>
+</div>
 
     </div>
 
