--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thoughts Dump!</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Link to the CSS file -->
 </head>
 <body>
+
+    <!-- Admin Login Link (Hidden Initially) -->
+    <a href="admin-login.html" class="admin-login" id="adminLogin">Admin Login</a>
 
     <div class="container">
         <!-- Main Title -->
@@ -44,6 +47,7 @@
         <button type="submit" class="cta-button" onclick="submitForm()">Dump it!</button>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Link to the JavaScript file -->
+    <script src="script.js"></script> 
 </body>
 </html>
