--- a/confirmation.html
+++ b/confirmation.html
@@ -4,8 +4,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmation - Thoughts Dump!</title>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Global Styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Patrick Hand', cursive; /* Fun, handwriting-like font */
+            background: linear-gradient(135deg, #F7E1F7, #D4F7F7); /* Pastel gradient background */
+            color: #333;
+            line-height: 1.6;
+            font-size: 16px;
+        }
+
+        /* Full Screen Layout */
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            text-align: center;
+            padding: 40px;
+        }
+
+        /* Header Section */
+        header {
+            margin-bottom: 40px;
+        }
+
+        header h1 {
+            font-family: 'Patrick Hand', cursive;
+            font-size: 4rem;
+            color: #FF8DAA; /* Pastel pink */
+            letter-spacing: 2px;
+            margin-bottom: 10px;
+        }
+
+        header .subheading {
+            font-size: 1.5rem;
+            color: #6D6D6D;
+            font-weight: bold;
+            max-width: 80%;
+            margin: 0 auto;
+        }
+
+        /* Confirmation Message */
+        .confirmation-message {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 30px;
+        }
+
+        /* Share Section (Social Media Links) */
+        .share-section {
+            margin-top: 40px;
+        }
+
+        .share-section p {
+            font-size: 1rem;
+            color: #333;
+        }
+
+        .social-icons {
+            margin-top: 10px;
+        }
+
+        .social-icons a {
+            margin: 0 10px;
+        }
+
+        .social-icons img {
+            width: 40px;
+            height: 40px;
+            transition: transform 0.3s ease;
+        }
+
+        .social-icons img:hover {
+            transform: scale(1.1);
+        }
+
+        /* Coffee Section (Small and Cute) */
+        .coffee-section {
+            text-align: center;
+            font-size: 1rem;
+            color: #333;
+            margin-top: 20px;
+        }
+
+        .coffee-section img {
+            width: 80px;
+            height: 80px;
+            margin-top: 10px;
+        }
+
+        .coffee-section p {
+            font-size: 0.9rem;
+            color: #666;
+            margin-top: 5px;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 3rem;
+            }
+
+            .confirmation-message {
+                font-size: 1rem;
+            }
+
+            .social-icons a {
+                margin: 0 5px;
+            }
+
+            .coffee-section {
+                font-size: 0.9rem;
+            }
+        }
+    </style>
 </head>
 <body>
 
@@ -45,8 +166,6 @@
         </div>
 
     </div>
-
-    <script src="script.js"></script>
 
 </body>
 </html>
