--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            font-family: 'Patrick Hand', cursive; /* Fun, handwriting-like font */
+            font-family: 'Comic Sans MS', cursive, sans-serif; /* Comic Sans MS font */
             background: linear-gradient(135deg, #F7C6D4, #D8E9F1); /* Pastel gradient background */
             color: #333;
             line-height: 1.6;
@@ -37,7 +37,6 @@
         }
 
         header h1 {
-            font-family: 'Patrick Hand', cursive; /* Playful handwritten font */
             font-size: 4rem;
             color: #FFB6C1; /* Soft pink */
             letter-spacing: 2px;
@@ -70,7 +69,6 @@
             height: 150px;
             padding: 15px;
             font-size: 1.3rem;
-            font-family: 'Patrick Hand', cursive;
             background-color: #FFF1F3; /* Light pink background */
             border: none;
             border-radius: 8px;
