--- a/confirmation.html
+++ b/confirmation.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            font-family: 'Patrick Hand', cursive; /* Fun, handwriting-like font */
+            font-family: 'Comic Sans MS', cursive, sans-serif; /* Comic Sans MS font */
             background: linear-gradient(135deg, #F7E1F7, #D4F7F7); /* Pastel gradient background */
             color: #333;
             line-height: 1.6;
@@ -37,7 +37,6 @@
         }
 
         header h1 {
-            font-family: 'Patrick Hand', cursive;
             font-size: 4rem;
             color: #FF8DAA; /* Pastel pink */
             letter-spacing: 2px;
