--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
         body {
             font-family: 'Comic Sans MS', cursive, sans-serif; /* Comic Sans MS font */
-            background: linear-gradient(135deg, #F7C6D4, #D8E9F1); /* Pastel gradient background */
+            background: linear-gradient(135deg, #FFB6C1, #D8E9F1); /* Pastel gradient background */
+            background-size: cover;
+            background-attachment: fixed;
             color: #333;
             line-height: 1.6;
             font-size: 16px;
@@ -29,6 +31,8 @@
             min-height: 100vh;
             text-align: center;
             padding: 40px;
+            background-image: url('https://www.transparenttextures.com/patterns/cubes.png'); /* Subtle pattern background */
+            background-color: #fdfdfd; /* light neutral background */
         }
 
         /* Header Section */
@@ -56,7 +60,7 @@
             width: 90%;
             max-width: 600px;
             background-color: #fff;
-            border: 3px dashed #F5A3B1; /* Light dashed border */
+            border: 3px dashed #FF8DAA; /* Light dashed border */
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
