--- a/confirmation.html
+++ b/confirmation.html
@@ -29,6 +29,8 @@
             min-height: 100vh;
             text-align: center;
             padding: 40px;
+            background-image: url('https://www.transparenttextures.com/patterns/cubes.png'); /* Subtle pattern background */
+            background-color: #fff;
         }
 
         /* Header Section */
@@ -57,34 +59,6 @@
             font-weight: bold;
             color: #333;
             margin-bottom: 30px;
-        }
-
-        /* Share Section (Social Media Links) */
-        .share-section {
-            margin-top: 40px;
-        }
-
-        .share-section p {
-            font-size: 1rem;
-            color: #333;
-        }
-
-        .social-icons {
-            margin-top: 10px;
-        }
-
-        .social-icons a {
-            margin: 0 10px;
-        }
-
-        .social-icons img {
-            width: 40px;
-            height: 40px;
-            transition: transform 0.3s ease;
-        }
-
-        .social-icons img:hover {
-            transform: scale(1.1);
         }
 
         /* Coffee Section (Small and Cute) */
@@ -117,10 +91,6 @@
                 font-size: 1rem;
             }
 
-            .social-icons a {
-                margin: 0 5px;
-            }
-
             .coffee-section {
                 font-size: 0.9rem;
             }
@@ -139,22 +109,6 @@
         <!-- Confirmation Message -->
         <div class="confirmation-message">
             <p>We appreciate you sharing your thoughts. Take a deep breath, you’re awesome!</p>
-        </div>
-
-        <!-- Share Section (Social Media Links) -->
-        <div class="share-section">
-            <p>Share the good vibes! Tell your friends or post it on social media to spread the fun!</p>
-            <div class="social-icons">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=YOUR_URL" target="_blank">
-                    <img src="facebook-icon.png" alt="Share on Facebook">
-                </a>
-                <a href="https://twitter.com/intent/tweet?url=YOUR_URL&text=Check%20this%20out!" target="_blank">
-                    <img src="twitter-icon.png" alt="Share on Twitter">
-                </a>
-                <a href="https://www.instagram.com" target="_blank">
-                    <img src="instagram-icon.png" alt="Share on Instagram">
-                </a>
-            </div>
         </div>
 
         <!-- Coffee Section (Small and Cute) -->
