--- a/confirmation.html
+++ b/confirmation.html
@@ -114,7 +114,7 @@
         <!-- Coffee Section (Small and Cute) -->
         <div class="coffee-section">
             <p>If you'd like to show some love, feel free to buy me a coffee! It’s totally optional:</p>
-            <img src="your-maya-qr-code.png" alt="Maya QR Code">
+            <img src="IMG_5034.jpeg" alt="Maya QR Code">
             <p>Scan the QR code to buy me a coffee. ☕</p>
         </div>
 
