--- a/confirmation.html
+++ b/confirmation.html
@@ -70,8 +70,8 @@
         }
 
         .coffee-section img {
-            width: 80px;
-            height: 80px;
+            width: 250px; /* Larger size */
+            height: 250px; /* Larger size */
             margin-top: 10px;
         }
 
@@ -94,6 +94,11 @@
             .coffee-section {
                 font-size: 0.9rem;
             }
+
+            .coffee-section img {
+                width: 200px; /* Adjust the size for smaller screens */
+                height: 200px; /* Adjust the size for smaller screens */
+            }
         }
     </style>
 </head>
@@ -114,7 +119,7 @@
         <!-- Coffee Section (Small and Cute) -->
         <div class="coffee-section">
             <p>If you'd like to show some love, feel free to buy me a coffee! It’s totally optional:</p>
-            <img src="IMG_5034.jpeg" alt="Maya QR Code">
+            <img src="IMG_5034.jpeg" alt="Maya QR Code"> <!-- Larger QR Code -->
             <p>Scan the QR code to buy me a coffee. ☕</p>
         </div>
 
